Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.22 - unreleased
        Steve Cole
	- segfault in vdeluser with MySQL back end
	- invalid MySQL info in UPGRADE

	Bill Shupp
	- Missing ERR defines in vpopmaild.msg
	- Fix help text for add_ip_map and del_ip_map in vpopmaild.c

5.4.21 - Released 06-Sep-2007
	Joshua Megerman, Alessio Cecchi
	- fix bug in vpopmaild add_alias command


5.4.20 - Released 21-Aug-2007
	Bill Shupp/Rick Widmer
	- add show_error function to vpopmaild 

	Rick Widmer
	- Make vadduser check that domain exists and user does not exist
	  before prompting for password
	- Add TODO file to record stuff I don't want to forget
	- Add README.vdelivermail 
	- Add examples for delete and bounce-no-mailbox to help on vadddomain

	Remo Mattei
	- Change upgrade script to use pw_domain instead of domain in example code
	  to change domain name field lengths.

	John Simpson, Joshua Megerman, Adam Sloan
	- Fix bad exit if script exists but can not be executed
	- Fix missing onchange on delete of alias domain

	John Simpson
	- Bug fix for vuserifo - vlimits
	
	Harm van Tilborg
	- Add support to vpopmaild to retrieve used storage sizes of domains or users
	- mod_user did not respond +OK if command is valid

	Vitali Malicky (coonardoo), Ismail Yenigul
	- add ldap patch [1909348]

	Ronnie Karstenberg (rkarstenberg)
	- vdominfo crashes with a lot of aliased domains [1765534]

5.4.19 - released 21-May-2007
	Rick Widmer
	- update to aclocal 1.9.5, automake 1.9.5, autoconf 2.59 to match my system
	- Don't set LocalPort to a real port number so the default case has a chance 
	  to identify how vchkpw was called.
	- ./configure tells status of onchange script setting
	- Fix rights problem with alias commands.  -  thanks Alessio Cecchi
	- Only report out of order entries when sorting files once per file